# solstis_tcpip

./: README.md  pyproject.toml
solstis_tcpip/: README.md  solstis_constants.py  solstis_core.py  test_solstis_constants.py  test_solstis_core.py  utils.py
solstis_tcpip/init_test/: test_communication.ipynb  test_communication_hard.ipynb
